# adventofcode

./: .gitignore  Log.md  README.md  go.work  go.work.sum  run.ps1  todolist.md
2021/day02/: part1.md
2021/day03/: part1.md
2021/day04/: part1.md
2021/day07/: part2.md
2021/day09/: part2.md
2021/day12/: part1.md
2021/day14/: part2.md
2021/day15/: part1.md
2021/day16/: part1.md
20211201/part2/: Program.cs
20211203/part1/: Program.cs
20211203/part2/: Program.cs
20211205/part1/: Program.cs
20211206/part2/: Program.cs
20211207/part1/: Program.cs
20211207/part2/: Program.cs
20211208/part1/: Program.cs
20211211/part1/: Program.cs
20211211/part2/: Program.cs
20211213/part2/: Program.cs
20211214/part1/: Program.cs
20211214/part2/: Program.cs
20211214/part2 - select/: Program.cs
20211215/part1/: Program.cs  test-input.txt
20211215/part2/: Program.cs
20211215/part2-astar/: part2-astar.csproj
20211216/part1/: Program.cs  (+1 more)
20211216/part2/: Program.cs
Scripts/: solve_csharp.ps1  solve_go.ps1  solve_python.ps1
Solutions/c/: CMakeLists.txt  README.md  Solution.c  Solution.h  Solution01.h  adventofcode.c  config.txt  date.c  date.h  mystring.c  mystring.h  registration.c  registration.h
Solutions/c/2023/: Solution01.c
Solutions/c/y2023/: Solution01.c  Solution01.h  Solution02.c  Solution03.c
Templates/: bash.tmpl  c.tmpl  clojure.tmpl  csharp.tmpl  go.tmpl  haskell.tmpl  java.tmpl  kotlin.tmpl  lua.tmpl  php.tmpl  python.tmpl  r.tmpl  v.tmpl
cli/: date.go  generator.go  go.mod  go.sum  languages.go  main.go
src/: main.rs
(+244 files in other folders)
